[gd_scene load_steps=5 format=2]

[ext_resource path="res://3.svg" type="Texture" id=1]
[ext_resource path="res://control.gd" type="Script" id=2]
[ext_resource path="res://crystal0.jpeg" type="Texture" id=3]
[ext_resource path="res://dozor.png" type="Texture" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.286275, 0.592157, 0.564706, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Menus" type="VBoxContainer" parent="ColorRect/HBoxContainer"]
margin_right = 98.0
margin_bottom = 600.0

[node name="TextureRect" type="TextureRect" parent="ColorRect/HBoxContainer/Menus"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="Samples" type="Button" parent="ColorRect/HBoxContainer/Menus"]
margin_top = 68.0
margin_right = 98.0
margin_bottom = 88.0
text = "Samples"

[node name="DataAnalysis" type="Button" parent="ColorRect/HBoxContainer/Menus"]
margin_top = 92.0
margin_right = 98.0
margin_bottom = 112.0
text = "Data Analysis"

[node name="DataAnalysisSubmenu" type="HBoxContainer" parent="ColorRect/HBoxContainer/Menus"]
visible = false
margin_top = 116.0
margin_right = 98.0
margin_bottom = 208.0

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/HBoxContainer/Menus/DataAnalysisSubmenu"]
margin_right = 10.0
margin_bottom = 92.0
rect_min_size = Vector2( 10, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer/Menus/DataAnalysisSubmenu"]
margin_left = 14.0
margin_right = 98.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -244, -85 )
size_flags_horizontal = 3

[node name="Button" type="Button" parent="ColorRect/HBoxContainer/Menus/DataAnalysisSubmenu/VBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
text = "Process"

[node name="Button2" type="Button" parent="ColorRect/HBoxContainer/Menus/DataAnalysisSubmenu/VBoxContainer"]
margin_top = 24.0
margin_right = 84.0
margin_bottom = 44.0
text = "Refine"

[node name="Button3" type="Button" parent="ColorRect/HBoxContainer/Menus/DataAnalysisSubmenu/VBoxContainer"]
margin_top = 48.0
margin_right = 84.0
margin_bottom = 68.0
text = "Fit Ligands"

[node name="Button4" type="Button" parent="ColorRect/HBoxContainer/Menus/DataAnalysisSubmenu/VBoxContainer"]
margin_top = 72.0
margin_right = 84.0
margin_bottom = 92.0
text = "PanDDA"

[node name="PanDDA" type="Button" parent="ColorRect/HBoxContainer/Menus"]
margin_top = 116.0
margin_right = 98.0
margin_bottom = 136.0
text = "PanDDA"

[node name="PanDDASubmenu" type="HBoxContainer" parent="ColorRect/HBoxContainer/Menus"]
visible = false
margin_top = 140.0
margin_right = 98.0
margin_bottom = 184.0

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/HBoxContainer/Menus/PanDDASubmenu"]
margin_right = 10.0
margin_bottom = 44.0
rect_min_size = Vector2( 10, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer/Menus/PanDDASubmenu"]
margin_left = 14.0
margin_right = 98.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( -244, -85 )
size_flags_horizontal = 3

[node name="Button" type="Button" parent="ColorRect/HBoxContainer/Menus/PanDDASubmenu/VBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
text = "Analyse"

[node name="Button2" type="Button" parent="ColorRect/HBoxContainer/Menus/PanDDASubmenu/VBoxContainer"]
margin_top = 24.0
margin_right = 84.0
margin_bottom = 44.0
text = "Inspect"

[node name="Results" type="Button" parent="ColorRect/HBoxContainer/Menus"]
margin_top = 140.0
margin_right = 98.0
margin_bottom = 160.0
text = "Results"

[node name="ResultsSubmenu" type="HBoxContainer" parent="ColorRect/HBoxContainer/Menus"]
visible = false
margin_top = 164.0
margin_right = 98.0
margin_bottom = 184.0

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/HBoxContainer/Menus/ResultsSubmenu"]
margin_right = 10.0
margin_bottom = 20.0
rect_min_size = Vector2( 10, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer/Menus/ResultsSubmenu"]
margin_left = 14.0
margin_right = 98.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( -244, -85 )
size_flags_horizontal = 3

[node name="Button" type="Button" parent="ColorRect/HBoxContainer/Menus/ResultsSubmenu/VBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
text = "Download"

[node name="Project" type="Button" parent="ColorRect/HBoxContainer/Menus"]
margin_top = 164.0
margin_right = 98.0
margin_bottom = 184.0
text = "Project"

[node name="ProjectSubmenu" type="HBoxContainer" parent="ColorRect/HBoxContainer/Menus"]
visible = false
margin_top = 188.0
margin_right = 98.0
margin_bottom = 280.0

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/HBoxContainer/Menus/ProjectSubmenu"]
margin_right = 10.0
margin_bottom = 92.0
rect_min_size = Vector2( 10, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer/Menus/ProjectSubmenu"]
margin_left = 14.0
margin_right = 98.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -244, -85 )
size_flags_horizontal = 3

[node name="Button" type="Button" parent="ColorRect/HBoxContainer/Menus/ProjectSubmenu/VBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
text = "Samples"

[node name="Button2" type="Button" parent="ColorRect/HBoxContainer/Menus/ProjectSubmenu/VBoxContainer"]
margin_top = 24.0
margin_right = 84.0
margin_bottom = 44.0
text = "PDBs"

[node name="Button3" type="Button" parent="ColorRect/HBoxContainer/Menus/ProjectSubmenu/VBoxContainer"]
margin_top = 48.0
margin_right = 84.0
margin_bottom = 68.0
text = "Details"

[node name="Button4" type="Button" parent="ColorRect/HBoxContainer/Menus/ProjectSubmenu/VBoxContainer"]
margin_top = 72.0
margin_right = 84.0
margin_bottom = 92.0
text = "Settings"

[node name="Libraries" type="Button" parent="ColorRect/HBoxContainer/Menus"]
margin_top = 188.0
margin_right = 98.0
margin_bottom = 208.0
text = "Libraries"

[node name="JobsStatus" type="Button" parent="ColorRect/HBoxContainer/Menus"]
margin_top = 212.0
margin_right = 98.0
margin_bottom = 232.0
text = "Jobs Status"

[node name="Logout" type="Button" parent="ColorRect/HBoxContainer/Menus"]
margin_top = 236.0
margin_right = 98.0
margin_bottom = 256.0
text = "Logout"

[node name="SamplesPaneX" type="CenterContainer" parent="ColorRect/HBoxContainer"]
visible = false
margin_left = 102.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/HBoxContainer/SamplesPaneX"]
margin_left = 411.0
margin_top = 280.0
margin_right = 511.0
margin_bottom = 320.0
rect_min_size = Vector2( 100, 40 )
bbcode_enabled = true
bbcode_text = "[center] [color=#8ff]Samples[/color] is selected.[/center]"
text = " Samples is selected."
scroll_active = false

[node name="DataAnalysisPane" type="CenterContainer" parent="ColorRect/HBoxContainer"]
visible = false
margin_left = 102.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/HBoxContainer/DataAnalysisPane"]
margin_left = 411.0
margin_top = 280.0
margin_right = 511.0
margin_bottom = 320.0
rect_min_size = Vector2( 100, 40 )
bbcode_enabled = true
bbcode_text = "[center] [color=#8ff]Data Analysis[/color] is selected.[/center]"
text = " Data Analysis is selected."
scroll_active = false

[node name="PanDDAPane" type="CenterContainer" parent="ColorRect/HBoxContainer"]
visible = false
margin_left = 102.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/HBoxContainer/PanDDAPane"]
margin_left = 411.0
margin_top = 280.0
margin_right = 511.0
margin_bottom = 320.0
rect_min_size = Vector2( 100, 40 )
bbcode_enabled = true
bbcode_text = "[center] [color=#8ff]PanDDA[/color] is selected.[/center]"
text = " PanDDA is selected."
scroll_active = false

[node name="ResultsPane" type="CenterContainer" parent="ColorRect/HBoxContainer"]
visible = false
margin_left = 102.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/HBoxContainer/ResultsPane"]
margin_left = 411.0
margin_top = 280.0
margin_right = 511.0
margin_bottom = 320.0
rect_min_size = Vector2( 100, 40 )
bbcode_enabled = true
bbcode_text = "[center] [color=#8ff]Results[/color] is selected.[/center]"
text = " Results is selected."
scroll_active = false

[node name="ProjectPane" type="CenterContainer" parent="ColorRect/HBoxContainer"]
visible = false
margin_left = 102.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/HBoxContainer/ProjectPane"]
margin_left = 411.0
margin_top = 280.0
margin_right = 511.0
margin_bottom = 320.0
rect_min_size = Vector2( 100, 40 )
bbcode_enabled = true
bbcode_text = "[center] [color=#8ff]Project[/color] is selected.[/center]"
text = " Project is selected."
scroll_active = false

[node name="ProjectPane2" type="CenterContainer" parent="ColorRect/HBoxContainer/ProjectPane"]
visible = false
margin_left = 411.0
margin_top = 280.0
margin_right = 511.0
margin_bottom = 320.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/HBoxContainer/ProjectPane/ProjectPane2"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
bbcode_enabled = true
bbcode_text = "[center] [color=#8ff]Project[/color] is selected.[/center]"
text = " Project is selected."
scroll_active = false

[node name="LibrariesPane" type="CenterContainer" parent="ColorRect/HBoxContainer"]
visible = false
margin_left = 102.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/HBoxContainer/LibrariesPane"]
margin_left = 411.0
margin_top = 280.0
margin_right = 511.0
margin_bottom = 320.0
rect_min_size = Vector2( 100, 40 )
bbcode_enabled = true
bbcode_text = "[center] [color=#8ff]Libraries[/color] is selected.[/center]"
text = " Libraries is selected."
scroll_active = false

[node name="JobStatusPane" type="CenterContainer" parent="ColorRect/HBoxContainer"]
visible = false
margin_left = 102.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/HBoxContainer/JobStatusPane"]
margin_left = 411.0
margin_top = 280.0
margin_right = 511.0
margin_bottom = 320.0
rect_min_size = Vector2( 100, 40 )
bbcode_enabled = true
bbcode_text = "[center] [color=#8ff]Job Status[/color] is selected.[/center]"
text = " Job Status is selected."
scroll_active = false

[node name="SamplesPane" type="GridContainer" parent="ColorRect/HBoxContainer"]
margin_left = 102.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
columns = 8

[node name="col0" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_right = 79.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "crystal"
valign = 1

[node name="col1" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 83.0
margin_right = 104.0
margin_bottom = 14.0
text = "run	"
valign = 1

[node name="col2" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 108.0
margin_right = 177.0
margin_bottom = 14.0
text = "processing"
valign = 1

[node name="col3" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 181.0
margin_right = 252.0
margin_bottom = 14.0
text = "	refinement"
valign = 1

[node name="col4" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 256.0
margin_right = 321.0
margin_bottom = 14.0
text = "resolution"
valign = 1

[node name="col5" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 325.0
margin_right = 370.0
margin_bottom = 14.0
text = "picture"
valign = 1

[node name="col6" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 374.0
margin_right = 410.0
margin_bottom = 14.0
text = "dozer"
valign = 1

[node name="col7" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 414.0
margin_right = 432.0
margin_bottom = 14.0
text = "???"
valign = 1

[node name="cell-0-0" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_top = 27.0
margin_right = 79.0
margin_bottom = 41.0
text = "MID2-x0251"
valign = 1

[node name="cell-0-1" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 83.0
margin_top = 27.0
margin_right = 104.0
margin_bottom = 41.0
text = "1"
align = 1
valign = 1

[node name="cell-0-2" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 108.0
margin_top = 27.0
margin_right = 177.0
margin_bottom = 41.0
text = " XIA2/XDS"
valign = 1

[node name="cell-0-3" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 181.0
margin_top = 27.0
margin_right = 252.0
margin_bottom = 41.0
text = "	DIMPLE"
valign = 1

[node name="cell-0-4" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 256.0
margin_top = 27.0
margin_right = 321.0
margin_bottom = 41.0
text = "1.70"
valign = 1

[node name="cell-0-5" type="TextureRect" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 325.0
margin_top = 18.0
margin_right = 357.0
margin_bottom = 50.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 3 )
expand = true

[node name="cell-0-6" type="TextureRect" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 374.0
margin_top = 18.0
margin_right = 406.0
margin_bottom = 50.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )
expand = true

[node name="cell-0-7" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 414.0
margin_top = 27.0
margin_right = 432.0
margin_bottom = 41.0
text = "???"
valign = 1

[node name="cell-1-0" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_top = 63.0
margin_right = 79.0
margin_bottom = 77.0
text = "MID2-x0252"
valign = 1

[node name="cell-1-1" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 83.0
margin_top = 63.0
margin_right = 104.0
margin_bottom = 77.0
text = "2"
align = 1
valign = 1

[node name="cell-1-2" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 108.0
margin_top = 63.0
margin_right = 177.0
margin_bottom = 77.0
text = " XIA2/XDS"
valign = 1

[node name="cell-1-3" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 181.0
margin_top = 63.0
margin_right = 252.0
margin_bottom = 77.0
text = "	DIMPLE"
valign = 1

[node name="cell-1-4" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 256.0
margin_top = 63.0
margin_right = 321.0
margin_bottom = 77.0
text = "1.70"
valign = 1

[node name="cell-1-5" type="TextureRect" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 325.0
margin_top = 54.0
margin_right = 357.0
margin_bottom = 86.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 3 )
expand = true

[node name="cell-1-6" type="TextureRect" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 374.0
margin_top = 54.0
margin_right = 406.0
margin_bottom = 86.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )
expand = true

[node name="cell-1-7" type="Label" parent="ColorRect/HBoxContainer/SamplesPane"]
margin_left = 414.0
margin_top = 63.0
margin_right = 432.0
margin_bottom = 77.0
text = "???"
valign = 1

[connection signal="pressed" from="ColorRect/HBoxContainer/Menus/Samples" to="." method="select_samples"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Menus/DataAnalysis" to="." method="select_data_analysis"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Menus/PanDDA" to="." method="select_pandda"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Menus/Results" to="." method="select_results"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Menus/Project" to="." method="select_project"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Menus/Libraries" to="." method="select_libraries"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Menus/JobsStatus" to="." method="select_job_status"]
